# libtorch-yolov5

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: detector.h  utils.h
src/: detector.cpp  main.cpp
utils/: export.py
